--- a/Lab2/eventlistners.html
+++ b/Lab2/eventlistners.html
@@ -29,20 +29,24 @@
 </head>
 <body>
 
-    <h2 id="westerntitle" onmouseover='expand("western");collapse("borneo");'>Western Adventure</h2>
+    <h2 id="westerntitle">Western Adventure</h2>
     <div id="western">
     A typical tour is our Western Adventure tour, 
     featuring activities which can include white water 
     rafting on the Colorado river, desert exploring, 
     horse riding in the Wild West.
     </div>
-    <h2 id="borneotitle" onmouseover='expand("borneo");collapse("western");'>Borneo Adventure</h2>
+    <h2 id="borneotitle">Borneo Adventure</h2>
     <div id="borneo" >
     A 15 day safari exploring the forests and beaches of Borneo. 
     You will explore the forests of Kinabalu, climb the highest peak 
     in South East Asia and come in close contact with the Orang Utan, 
     the remarkable 'man of the forest'.
     </div>
-    <script src="js/events_inline.js"></script>
+    <button id="register">Register handlers</button>
+    <button id="remove">Remove handlers</button>
+
+    <script src="js/eventlistners.js"></script>
+
 </body>
 </html>
